instance/istio-system/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
    # tls:
    #   httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - '*.hostname' # {"$kpt-set":"gateway-hostname"}
    tls:
      mode: SIMPLE
      credentialName: wildcard-cert # {"$kpt-set":"gateway-tls-secret"}
